--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linkwire Media</title>
     <!-- REMIX ICONS -->
+    <!-- HTML Meta Tags -->
+<meta name="description" content="Linkwire is your frontline defense. We are a strategic intelligence, crisis management, and media innovation firm helping governments, businesses, law enforcement, and organizations navigate uncertainty, protect reputations, and influence public perception">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://linkwiremedia.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Linkwire Media">
+<meta property="og:description" content="Linkwire is your frontline defense. We are a strategic intelligence, crisis management, and media innovation firm helping governments, businesses, law enforcement, and organizations navigate uncertainty, protect reputations, and influence public perception">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/3c9b7c72-a399-4832-8f74-4adadf3cde51.png?token=WPDGbnM1gsVkS4sBzDTk3M5pWtKwxyL6cuCoiv19pMQ&height=630&width=1200&expires=33280373141">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="linkwiremedia.vercel.app">
+<meta property="twitter:url" content="https://linkwiremedia.vercel.app/">
+<meta name="twitter:title" content="Linkwire Media">
+<meta name="twitter:description" content="Linkwire is your frontline defense. We are a strategic intelligence, crisis management, and media innovation firm helping governments, businesses, law enforcement, and organizations navigate uncertainty, protect reputations, and influence public perception">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/3c9b7c72-a399-4832-8f74-4adadf3cde51.png?token=WPDGbnM1gsVkS4sBzDTk3M5pWtKwxyL6cuCoiv19pMQ&height=630&width=1200&expires=33280373141">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
